@@ -18,6 +18,7 @@
 13. Fix colour of queue button in now-playing bar when using light themes with
     coloured toolbars.
 14. Fix alignment of album times when using album style queue.
+15. Collapse now-playing if queue emptied.
 
 5.1.1
 -----
